# flags-k4-free-balanced-partitions

./: .gitignore  CMakeLists.txt  README.md  init-cmake.sh  param.csdp  pyproject.toml  round.sage  rounding_Integer.sage
calculations/: 3-partition-max-degree-2-3.py  3-partition-optimistic.py  3-partition-triangle-optimistic.py  3-partition.py  sparse-wheel.py  unbalanced-wheel.py
graph-checks/: F_vertices2_edges2__n6_unlabeled.txt  F_vertices2_edges2__size6_type00.txt  F_vertices2_edges3__n5_unlabeled.txt  F_vertices2_edges3__size5_type00.txt
graph-checks-forbidden/: forbidden_vertices1_edges3.txt  forbidden_vertices1_edges4.txt  forbidden_vertices2_edges3.txt  forbidden_vertices3_edges3.txt
k4-free/: forbidden_edges2.txt  forbidden_vertices5_edges2.txt
problems/: assumption-utils.hpp  balanced-bipartition-utils.hpp  graph-checks.cpp  max-2-experiment.cpp  max-2.cpp  sum-2-color.cpp  sum-2.cpp  sum-utils.hpp
src/: cache.cpp  cache.hpp  config.hpp  flag-calculator.cpp  flag-calculator.hpp  flag-generator.cpp  flag-generator.hpp  flag.cpp  flag.hpp  option-parser.cpp  option-parser.hpp  problem.hpp  solution-processor.cpp  solution-processor.hpp  solver.cpp  solver.hpp  utils.cpp  utils.hpp
utils/: count_values.py  flag_utils.py
wlike/: forbidden_vertices2_edges2.txt
